--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+.btn{
+    border: 1px solid;
+    cursor: pointer;
+    font-size: 40px;
+    padding: 5%;
+    margin: auto;
+    margin-bottom: 3%;
+    text-align: center;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: bold;
+    border-radius: 10px;
+}
+.display{
+    background-color: chocolate;
+    margin: auto;
+    height: 65px;
+    font-size: 50px;
+    padding: 2%;
+    box-sizing:content-box;
+    color: white;
+    font-family: 'Orbitron', sans-serif;
+    border-radius: 40px;
+    padding-left: 20px;
+    border-bottom: 6px solid black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.buttons{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5%;
+}
+.calculator{
+    width: 27%;
+    margin: auto;
+    background-color: khaki;
+    box-shadow: 0.5rem 0.5rem 1rem rgba(71, 58, 63, 0.652);
+    border-radius: 3em;
+    border: 1px solid black;
+    border-width: 5px;
+    margin-top: 4em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body{
+    background: linear-gradient(212deg,#93ff87,#d6360a,#db41a3,#953194);
+    background-size: 300% 300%;
+    animation: gradient-animation 4s ease infinite;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  @keyframes gradient-animation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
